# olap-revenue-forensics

./: .env.example  .gitignore  README.md  pyproject.toml
notebooks/: audit_analysis_etl.ipynb  tools.py
schema/: SuperSmartMarket.architect
sql/: business_queries.sql  create_schema.sql  integrity_checks.sql  log_analysis.sql  stored_procedures.sql  stored_procedures_demo.sql
